# cuADMM

./: .gitignore  CMakeLists.txt  README.md
MATLAB/: CMakeLists.txt  Makefile  cuadmm_MATLAB.cu  example_minimizer.m  example_mosek.m  example_true_data.m  test.m
examples/: convert_mosek2sedumi.m  mosek_to_txt.m  problem2txt.m  run_admmplus.m  sdpa_to_txt.m  sedumi_to_txt.m  solve_with_scs.m
examples/SPOT/data/MOSEK/: PlanarHand_N=10_MOMENT.mat  PlanarHand_N=1_MOMENT.mat  PushBox_N=30_MOMENT.mat  PushBox_N=30_SOS.mat  PushBox_N=50_MOMENT.mat  PushT_N=10_MOMENT.mat  PushT_N=30_MOMENT.mat  pushbox-10.mat  pushbox.mat
examples/benchmarks/: benchmarks.csv
examples/dimacs/: sedumi_to_txt.m
examples/dimacs/data/MATLAB/: hinf12.mat  hinf13.mat  truss5.mat  truss8.mat
examples/dimacs/mexfiles/: header.h  mexbwsolve.c
examples/max-cut/: genMAXCUT.m  run_maxcut.m  simple_graph.m
examples/mexfiles/: mexbwsolve.mexmaci64  mexbwsolve.mexw64  mexfwsolve.c  mexfwsolve.mexw64  mexsvec.mexmaci64
examples/pendulum/: C.txt
examples/pendulum/MATLAB/: N=80_licols.mat
examples/pendulum/TXT/N=80_licols/: C.txt  blk.txt
examples/plato/MATLAB/: 1dc.1024.mat  biggs.dat-s  bqp-r1-40-1.mat  chs_5000.mat  cnhil10.mat  neosfbr25.mat  ros_2000.mat  rose13.mat  swissroll.mat  taha1a.mat  trto5.dat-s
examples/plato/TXT/1dc.1024/: At.txt
examples/plato/TXT/AlH_1-Sigma+_STO-6GN14r20g1T2_5/: C.txt  b.txt  blk.txt
examples/plato/TXT/BH2_2A1_STO-6GN7r14g1T2/: C.txt  b.txt  blk.txt
examples/plato/TXT/biggs/: At.txt  C.txt  b.txt  blk.txt
examples/plato/TXT/bqp-r1-40-1/: C.txt
examples/plato/TXT/chs5000/: C.txt  b.txt  blk.txt
examples/plato/TXT/cnhil10/: At.txt  b.txt
examples/plato/TXT/mater-6/: C.txt  b.txt  blk.txt
examples/plato/TXT/neosfrbr25/: C.txt
examples/plato/TXT/quasar-500/: C.txt  b.txt
examples/plato/TXT/ros_2000/: At.txt  C.txt  b.txt  blk.txt
examples/plato/TXT/rose13/: At.txt  b.txt
examples/plato/TXT/swissroll/: C.txt  b.txt
examples/plato/TXT/taha1a/: C.txt  b.txt  blk.txt
examples/plato/TXT/trto5/: At.txt  C.txt  b.txt  (+1 more)
examples/utils/: column2row_recursive.m  data_sdpt3_to_admmSDPcuda.m  from_cell_to_array.m  read_sdpa.m  read_sedumi.m
include/cuadmm/: check.h  cholesky_cpu.h  cublas.h  cusolver.h  cusparse.h  duo_solver.h  eig_cpu.h  io.h  kernels.h  mapper.h  matrix_sizes.h  memory.h  problem.h  projection.h  solver.h  utils.h
ksc/: sdpt2mosek_seiveSDP.m  test_mittelmann.m
ksc/admmSDP/: install_mex.m  testADMMQuasar.m  test_admm.m
ksc/admmSDP/admm/: ADMM.m  AXmapADMM.m  AtymapADMM.m  blkTraceADMM.m  cholADMM.m  linSysSolveADMM.m  mytimeADMM.m  opsADMM.m  projsdpADMM.m  smatADMM.m  svecADMM.m
ksc/admmSDP/mexfiles/: mexFnorm.mexmaci64  mexeig.mexmaci64  mexfwsolve.mexmaci64  mexsmat.mexmaci64
ksc/admmSDP/utils/: computeMaxRank.m  gencorrmat.m
ksc/ksc-utils/: generate_pool.m  generate_pool_fast.m  get_cs_Xmoms_dual.m  get_cs_heuristic_solution.m  get_cs_moment_matrices_dual.m  get_deg_from_so2.m  get_eta.m  get_lam_lists.m  get_lams.m  get_mosek_gap.m  get_suboptimality_gap.m  licols.m  msspoly_clean.m  msspoly_homogenize.m  msspoly_visualize.m  remove_close_zeros.m  remove_redundant.m  store_dense_vec.m  store_sparse_mat.m
ksc/lib/: mymonomial_matlab.m
ksc/modules/: extraction_complex.m  extraction_robust.m  generate_moment_cone.m  lbfgs.asv  lbfgs.m  linspecer.m  moment_cone_proj_lbfgs.m  moment_cone_proj_newton_cg.m  newton_cg.m  proj_single.m  simsync2sdp.m  smat_single.m  sorteig_LOPBCG.m  svec_single.m
ksc/pathinfo/: jordan.m  ksc.asv
ksc/sos-sdp-conversion/: moment_index.m  moment_variable.m  moment_variable_coeff_core.mexa64  moment_variable_coeff_core.mexmaci64  monomial_id.m  monomial_id_core.mexa64  monomial_id_core.mexmaci64  mymonomial.m  mymonomial_core.mexa64  mymonomial_core.mexmaci64  primal_sparse_debug.m  sparse_sdp_relax.m  sparse_sdp_relax_backup.m  sparse_sdp_relax_backup_cpp.m  sparse_sdp_relax_core.mexa64  sparse_sdp_relax_core.mexmaci64  sparse_sdp_relax_homo.m  sparse_sdp_relax_homo_backup.m  sparse_sdp_relax_homo_matlab.m  sparse_sdp_relax_install.m  sparse_sdp_relax_matlab.m
ksc/sos-sdp-conversion/include/: indices.hpp
ksc/sos-sdp-conversion/src/: moment_index_core.cpp  moment_variable_coeff_core.cpp  monomial_id_core.cpp  mymonomial_core.cpp  sparse_sdp_relax_core.cpp
ksc/sos-sdp-conversion/test/: test_dense.m  test_monomial.m  test_sparse.m  test_sparse_full.m  test_sparse_full_whole.m  test_sparse_homo.m  test_tmp.m
plots/: single_batched_comparison.ipynb
src/: duo_solver.cu  main.cu  matrix_sizes.cu  problem.cu  solver.cu
src/kernels/: dense_dense.cu  dense_scalar.cu  diagonal_batch.cu  permutation.cu  sparse_dense.cu  sparse_matrix.cu  sparse_matrix_norm.cu  sparse_scalar.cu  test.cu  type_conversion.cu  utils.cu  vec_mat_conversion.cu
src/utils/: analyze_blk.cu  check_gpus.cu  get_eig_rank_mask.cu  get_maps.cu  inverse_permutation.cu  io.cu  projection.cu
test/: cholesky_cpu_test.hpp  cublas_test.hpp  cusolver_test.hpp  cusparse_test.hpp  dense_dense_test.hpp  dense_scalar_test.hpp  duo_solver_test.hpp  eig_cpu_test.hpp  io_test.hpp  kernels_test.hpp  memory_test.hpp  meta_test.hpp  simple_test.hpp  single_batched_comparison.hpp  solver_test.hpp  sparse_dense_test.hpp  sparse_scalar_test.hpp  tests.cpp  utils_test.hpp
test/data/: blk_types.txt  sparse_matrix.txt  sparse_matrix_coo.txt  sparse_matrix_coo_sorted.txt  sparse_matrix_out.txt  sparse_vector.txt
test/output/: single_batched_comparison.txt
(+43 files in other folders)
